# ruby-program

./: .gitignore  Anchor.toml  README.md  package.json  tsconfig.json
migrations/: deploy.ts
programs/ruby-program/: Cargo.toml
programs/ruby-program/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/ruby-program/src/instructions/: automate.rs  bury.rs  cancel_automate.rs  checkpoint.rs  claim_referral_rewards.rs  claim_sol.rs  claim_token.rs  close.rs  deploy.rs  initialize.rs  mod.rs  new_var.rs  register_referral.rs  reset.rs  set_admin.rs  set_buffer.rs  set_fee_collector.rs  set_swap_program.rs  set_var_address.rs  stake_claim.rs  stake_deposit.rs  stake_withdraw.rs  wrap.rs
programs/ruby-program/src/state/: automation.rs  board.rs  config.rs  miner.rs  mod.rs  referral.rs  round.rs  stake.rs  treasury.rs
programs/ruby-program/src/utils/: mod.rs  numeric.rs  transfer.rs
