[package]
name = "ruby-program"
version = "1.0.0"
description = "RUBY - A fair launch digital store of value on Solana"
edition = "2021"
license = "Apache-2.0"
homepage = "https://ruby.supply"

[lib]
crate-type = ["cdylib", "lib"]
name = "ruby_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-token-2022 = "^7"
spl-associated-token-account = { version = "^6", features = ["no-entrypoint"] }
solana-program = "2.1"
solana-nostd-keccak = "0.1.3"
entropy-api = "0.1.4"
bytemuck = "1.14"
mpl-token-metadata = "5.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
